add maker-bundle UCS-1

--- a/composer.json
+++ b/composer.json
@@ -65,5 +65,8 @@
             "require": "6.3.*",
             "docker": false
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.50"
     }
 }
