--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /.idea
 /.env
 ###< symfony/framework-bundle ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
