--- a/composer.json
+++ b/composer.json
@@ -68,6 +68,10 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.23",
-        "symfony/maker-bundle": "^1.50"
+        "phpunit/phpunit": "^10.3",
+        "symfony/browser-kit": "6.3.*",
+        "symfony/css-selector": "6.3.*",
+        "symfony/maker-bundle": "^1.50",
+        "symfony/phpunit-bridge": "^6.3"
     }
 }
