--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,7 +1,7 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: My App
+            title: User Crud API
             description: This is an awesome app!
             version: 1.0.0
     areas: # to filter documented areas
