--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.23",
+        "helmich/phpunit-json-assert": "^3.5",
         "phpunit/phpunit": "^10.3",
         "symfony/browser-kit": "6.3.*",
         "symfony/css-selector": "6.3.*",
