--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,4 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+DATABASE_URL="postgresql://symfony:symfony@localhost:5432/symfony?serverVersion=15&charset=utf8"
