--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: ./docker/php-fpm/Dockerfile
     volumes:
       - .:/var/www/
+    depends_on:
+      - postgres
     restart: always
 
   nginx:
